--- a/p8105_hw3_xz3078.md
+++ b/p8105_hw3_xz3078.md
@@ -144,3 +144,119 @@ mean hour of the day at which Pink Lady Apples are ordered from Sunday
 to Saturday are 13.4, 11.4, 11.7, 14.3, 11.6, 12.8, and 11.9.
 
 ## Problem 2
+
+``` r
+library(p8105.datasets)
+data("brfss_smart2010")
+```
+
+``` r
+brfss = 
+  brfss_smart2010 %>%
+  janitor::clean_names() %>% 
+  rename(state = locationabbr, location = locationdesc) %>%
+  filter(topic == "Overall Health") %>%
+  filter(response %in% c("Poor", "Fair", "Good", "Very good", "Excellent")) %>%
+  mutate(response = ordered(response, levels = c("Poor", "Fair", "Good", "Very good", "Excellent"))) 
+```
+
+``` r
+brfss %>%
+  filter(year == 2002) %>%
+  group_by(state) %>%
+  summarize(
+    n_location = n_distinct(location)) %>%
+  filter(n_location >= 7)
+```
+
+    ## # A tibble: 6 x 2
+    ##   state n_location
+    ##   <chr>      <int>
+    ## 1 CT             7
+    ## 2 FL             7
+    ## 3 MA             8
+    ## 4 NC             7
+    ## 5 NJ             8
+    ## 6 PA            10
+
+``` r
+brfss %>%
+  filter(year == 2010) %>%
+  group_by(state) %>%
+  summarize(
+    n_location = n_distinct(location)) %>%
+  filter(n_location >= 7)
+```
+
+    ## # A tibble: 14 x 2
+    ##    state n_location
+    ##    <chr>      <int>
+    ##  1 CA            12
+    ##  2 CO             7
+    ##  3 FL            41
+    ##  4 MA             9
+    ##  5 MD            12
+    ##  6 NC            12
+    ##  7 NE            10
+    ##  8 NJ            19
+    ##  9 NY             9
+    ## 10 OH             8
+    ## 11 PA             7
+    ## 12 SC             7
+    ## 13 TX            16
+    ## 14 WA            10
+
+In 2002, CT, FL, MA, NC, NJ, PA were observed at 7 or more locations. In
+2010, CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA were
+observed at 7 or more locations.
+
+``` r
+brfss %>%
+  filter(response == "Excellent") %>%
+  group_by(state, year) %>%
+  mutate(mean_value = mean(data_value, na.rm = TRUE)) %>%
+  select(year, state, mean_value) %>%
+  distinct() %>%
+  ggplot(aes(x = year, y = mean_value, color = state)) + 
+    geom_line(alpha = .5)
+```
+
+![](p8105_hw3_xz3078_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+We can see from the plot that there is a downward trend for the mean
+data value for all states.
+
+``` r
+brfss %>%
+  filter(year %in% c(2006, 2010), state == "NY") %>%
+  group_by(year, response) %>%
+  drop_na(data_value) %>%
+  ggplot(aes(x = response, y = data_value)) + 
+    geom_point() +
+    facet_grid(. ~ year)
+```
+
+![](p8105_hw3_xz3078_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+
+Make a two-panel plot showing, for the years 2006, and 2010,
+distribution of data\_value for responses (“Poor” to “Excellent”) among
+locations in NY State.
+
+## Problem 3
+
+``` r
+accel=
+  read_csv("./data/accel_data.csv") %>%
+  janitor::clean_names() 
+```
+
+    ## Rows: 35 Columns: 1443
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## chr    (1): day
+    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
