--- a/p8105_hw3_xz3078.md
+++ b/p8105_hw3_xz3078.md
@@ -90,22 +90,21 @@ instacart %>%
   filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
   group_by(aisle) %>%
   count(product_name, name = "n_product") %>%
-  slice_max(n_product, n=3)
+  slice_max(n_product, n=3) %>%
+  knitr::kable()
 ```
 
-    ## # A tibble: 9 x 3
-    ## # Groups:   aisle [3]
-    ##   aisle                      product_name                              n_product
-    ##   <chr>                      <chr>                                         <int>
-    ## 1 baking ingredients         Light Brown Sugar                               499
-    ## 2 baking ingredients         Pure Baking Soda                                387
-    ## 3 baking ingredients         Cane Sugar                                      336
-    ## 4 dog food care              Snack Sticks Chicken & Rice Recipe Dog T~        30
-    ## 5 dog food care              Organix Chicken & Brown Rice Recipe              28
-    ## 6 dog food care              Small Dog Biscuits                               26
-    ## 7 packaged vegetables fruits Organic Baby Spinach                           9784
-    ## 8 packaged vegetables fruits Organic Raspberries                            5546
-    ## 9 packaged vegetables fruits Organic Blueberries                            4966
+| aisle                      | product\_name                                 | n\_product |
+|:---------------------------|:----------------------------------------------|-----------:|
+| baking ingredients         | Light Brown Sugar                             |        499 |
+| baking ingredients         | Pure Baking Soda                              |        387 |
+| baking ingredients         | Cane Sugar                                    |        336 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |         30 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |         28 |
+| dog food care              | Small Dog Biscuits                            |         26 |
+| packaged vegetables fruits | Organic Baby Spinach                          |       9784 |
+| packaged vegetables fruits | Organic Raspberries                           |       5546 |
+| packaged vegetables fruits | Organic Blueberries                           |       4966 |
 
 The three most popular items in “baking ingredients” are “Light Brown
 Sugar” with 499 items, “Pure Baking Soda” 387 items, and “Cane Sugar”
@@ -126,20 +125,19 @@ instacart %>%
     names_from = "order_dow", 
     values_from = "mean_hod"
   ) %>%
-  rename(Sunday = "0", Monday = "1", Tuesday = "2", Wednesday = "3", Thursday = "4", Friday = "5", Saturday = "6")
+  rename(Sunday = "0", Monday = "1", Tuesday = "2", Wednesday = "3", Thursday = "4", Friday = "5", Saturday = "6") %>%
+  knitr::kable()
 ```
 
     ## `summarise()` has grouped output by 'product_name'. You can override using the `.groups` argument.
 
-    ## # A tibble: 2 x 8
-    ## # Groups:   product_name [2]
-    ##   product_name     Sunday Monday Tuesday Wednesday Thursday Friday Saturday
-    ##   <chr>             <dbl>  <dbl>   <dbl>     <dbl>    <dbl>  <dbl>    <dbl>
-    ## 1 Coffee Ice Cream   13.8   14.3    15.4      15.3     15.2   12.3     13.8
-    ## 2 Pink Lady Apples   13.4   11.4    11.7      14.2     11.6   12.8     11.9
+| product\_name    |   Sunday |   Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
+|:-----------------|---------:|---------:|---------:|----------:|---------:|---------:|---------:|
+| Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 |  15.31818 | 15.21739 | 12.26316 | 13.83333 |
+| Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 |  14.25000 | 11.55172 | 12.78431 | 11.93750 |
 
 The mean hour of the day at which Coffee Ice Cream are ordered from
-Sunday to Saturday are 13.7, 14.3, 15.4, 15.3, 15.2, 12.3, and 13.8. The
+Sunday to Saturday are 13.8, 14.3, 15.4, 15.3, 15.2, 12.3, and 13.8. The
 mean hour of the day at which Pink Lady Apples are ordered from Sunday
 to Saturday are 13.4, 11.4, 11.7, 14.3, 11.6, 12.8, and 11.9.
 
@@ -218,7 +216,9 @@ brfss %>%
   select(year, state, mean_value) %>%
   distinct() %>%
   ggplot(aes(x = year, y = mean_value, color = state)) + 
-    geom_line(alpha = .5)
+    geom_line(alpha = .5) + 
+    labs(title = "“spaghetti” plot of average value over time",
+         y = "mean value")
 ```
 
 ![](p8105_hw3_xz3078_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
@@ -231,32 +231,128 @@ brfss %>%
   filter(year %in% c(2006, 2010), state == "NY") %>%
   group_by(year, response) %>%
   drop_na(data_value) %>%
-  ggplot(aes(x = response, y = data_value)) + 
-    geom_point() +
+  ggplot(aes(x = data_value, fill = response)) + 
+    geom_density(alpha = .5) +
+    labs(title = "distribution of data value for responses among locations in NY State") + 
     facet_grid(. ~ year)
 ```
 
 ![](p8105_hw3_xz3078_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
-Make a two-panel plot showing, for the years 2006, and 2010,
-distribution of data\_value for responses (“Poor” to “Excellent”) among
-locations in NY State.
+We can see from the plot that the data value in 2010 is better than 2006
+in general. The value for “Excellent” response is between “Fair” and
+“Good”.
 
 ## Problem 3
 
 ``` r
 accel=
   read_csv("./data/accel_data.csv") %>%
-  janitor::clean_names() 
+  janitor::clean_names() %>%
+  mutate(weekend = ifelse(day %in% c("Saturday", "Sunday"), 1, 0)) %>%
+  select(week, day_id, day, weekend, everything())
+
+accel
 ```
 
-    ## Rows: 35 Columns: 1443
+    ## # A tibble: 35 x 1,444
+    ##     week day_id day       weekend activity_1 activity_2 activity_3 activity_4
+    ##    <dbl>  <dbl> <chr>       <dbl>      <dbl>      <dbl>      <dbl>      <dbl>
+    ##  1     1      1 Friday          0       88.4       82.2       64.4       70.0
+    ##  2     1      2 Monday          0        1          1          1          1  
+    ##  3     1      3 Saturday        1        1          1          1          1  
+    ##  4     1      4 Sunday          1        1          1          1          1  
+    ##  5     1      5 Thursday        0       47.4       48.8       46.9       35.8
+    ##  6     1      6 Tuesday         0       64.8       59.5       73.7       45.7
+    ##  7     1      7 Wednesday       0       71.1      103.        68.5       45.4
+    ##  8     2      8 Friday          0      675        542       1010        779  
+    ##  9     2      9 Monday          0      291        335        393        335  
+    ## 10     2     10 Saturday        1       64         11          1          1  
+    ## # ... with 25 more rows, and 1,436 more variables: activity_5 <dbl>,
+    ## #   activity_6 <dbl>, activity_7 <dbl>, activity_8 <dbl>, activity_9 <dbl>,
+    ## #   activity_10 <dbl>, activity_11 <dbl>, activity_12 <dbl>, activity_13 <dbl>,
+    ## #   activity_14 <dbl>, activity_15 <dbl>, activity_16 <dbl>, activity_17 <dbl>,
+    ## #   activity_18 <dbl>, activity_19 <dbl>, activity_20 <dbl>, activity_21 <dbl>,
+    ## #   activity_22 <dbl>, activity_23 <dbl>, activity_24 <dbl>, activity_25 <dbl>,
+    ## #   activity_26 <dbl>, activity_27 <dbl>, activity_28 <dbl>, ...
 
-    ## -- Column specification --------------------------------------------------------
-    ## Delimiter: ","
-    ## chr    (1): day
-    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
+In this dataset, there are 35 observations and 1444 variables. Variables
+"activity\_\*" are the activity counts for each minute of a 24-hour day
+starting at midnight. There are 5 weeks, variable “weekend” equals to 1
+if it’s Saturday or Sunday, equals to 0 if it’s weekdays.
 
-    ## 
-    ## i Use `spec()` to retrieve the full column specification for this data.
-    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+``` r
+accel %>%
+  mutate(activity_total = select(., activity_1:activity_1440) %>% rowSums(na.rm = TRUE)) %>%
+  select(week, day_id, day, weekend, activity_total) %>%
+  knitr::kable()
+```
+
+| week | day\_id | day       | weekend | activity\_total |
+|-----:|--------:|:----------|--------:|----------------:|
+|    1 |       1 | Friday    |       0 |       480542.62 |
+|    1 |       2 | Monday    |       0 |        78828.07 |
+|    1 |       3 | Saturday  |       1 |       376254.00 |
+|    1 |       4 | Sunday    |       1 |       631105.00 |
+|    1 |       5 | Thursday  |       0 |       355923.64 |
+|    1 |       6 | Tuesday   |       0 |       307094.24 |
+|    1 |       7 | Wednesday |       0 |       340115.01 |
+|    2 |       8 | Friday    |       0 |       568839.00 |
+|    2 |       9 | Monday    |       0 |       295431.00 |
+|    2 |      10 | Saturday  |       1 |       607175.00 |
+|    2 |      11 | Sunday    |       1 |       422018.00 |
+|    2 |      12 | Thursday  |       0 |       474048.00 |
+|    2 |      13 | Tuesday   |       0 |       423245.00 |
+|    2 |      14 | Wednesday |       0 |       440962.00 |
+|    3 |      15 | Friday    |       0 |       467420.00 |
+|    3 |      16 | Monday    |       0 |       685910.00 |
+|    3 |      17 | Saturday  |       1 |       382928.00 |
+|    3 |      18 | Sunday    |       1 |       467052.00 |
+|    3 |      19 | Thursday  |       0 |       371230.00 |
+|    3 |      20 | Tuesday   |       0 |       381507.00 |
+|    3 |      21 | Wednesday |       0 |       468869.00 |
+|    4 |      22 | Friday    |       0 |       154049.00 |
+|    4 |      23 | Monday    |       0 |       409450.00 |
+|    4 |      24 | Saturday  |       1 |         1440.00 |
+|    4 |      25 | Sunday    |       1 |       260617.00 |
+|    4 |      26 | Thursday  |       0 |       340291.00 |
+|    4 |      27 | Tuesday   |       0 |       319568.00 |
+|    4 |      28 | Wednesday |       0 |       434460.00 |
+|    5 |      29 | Friday    |       0 |       620860.00 |
+|    5 |      30 | Monday    |       0 |       389080.00 |
+|    5 |      31 | Saturday  |       1 |         1440.00 |
+|    5 |      32 | Sunday    |       1 |       138421.00 |
+|    5 |      33 | Thursday  |       0 |       549658.00 |
+|    5 |      34 | Tuesday   |       0 |       367824.00 |
+|    5 |      35 | Wednesday |       0 |       445366.00 |
+
+We can see from the table that for week 1 and 2, the weekend activity
+total are much higher than weekdays. In week 3, Monday has the highest
+activity total. In week 4 and 5, the activity total at weekend are less
+than weekdays, and he barely use accelerometers on Saturday. In general,
+the total activity has a decrease trend as week increases.
+
+``` r
+accel %>%
+  pivot_longer(
+    activity_1:activity_1440,
+    names_to = "activity_minute", 
+    values_to = "activity"
+  ) %>%
+  separate(activity_minute, into = c("act", "minute"), sep = 9) %>%
+  mutate(minute = as.numeric(minute)) %>%
+  ggplot(aes(x = minute, y = activity, color = day)) + 
+    geom_line() + 
+    labs(title = "24-hour activity time courses for each day") +
+    scale_x_continuous(breaks=seq(0, 1440, 60)) + 
+    theme(axis.text.x = element_text(angle=90, hjust=1))
+```
+
+![](p8105_hw3_xz3078_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+We can see from the graph that from 7pm to 11pm is the peak of using
+accelerometer data for all day of week. Another small peak is from 11am
+to 12pm for Sunday. From 11pm to 5am is the minimum of using
+accelerometer data. These all make sense because 11pm to 5am is time for
+sleep and people usually use more accelerometer data before bed time and
+at noon.
